--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,13 @@
     <title>Advenaced React</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+    <script type="text/javascript">
+        window.initialData = <%-JSON.stringify(initialData)-%>;
+    </script>
     
 </head>
 <body>
-    <div id="root"><%-initialContent-%></div>
+    <div id="root"><%-initialMarkup-%></div>
     <script src="bundle.js"></script>
 </body>
 </html>
