--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
     <script type="text/javascript">
-        window.initialData = <%-JSON.stringify(initialData)-%>;
+        window.initialData = <%-JSON.stringify(initialData)-%> 
     </script>
     
 </head>
